--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,13 @@ jobs:
         push: true
         context: ./src
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DockerImageName }}:${{ github.sha }}
+
+    - name: Upload helm artifacts
+      if: github.ref_name == 'main'
+      uses: actions/upload-artifact@v4
+      with:
+        name: helm-artifacts
+        path: ${{ github.workspace }}/helm-charts        
         
   helm-ci:
     runs-on: ubuntu-latest
